add confirmTask
