# api/swagger/swagger.yaml
@@ -181,6 +181,35 @@ paths:
             description: Error
             schema:
               $ref: "#/definitions/ErrorResponse"
+  /confirmTask:
+        # binds a127 app logic to a route
+        x-swagger-router-controller: hello_world
+        get:
+          description: Returns 'Hello' to the caller
+          # used as the method name of the controller
+          operationId: confirmtask
+          parameters:
+             - name: phonenumber
+               in: query
+               description: The name of the person to whom to say hello
+               required: true
+               type: string
+             - name: timestamp
+               in: query
+               description: The name of the person to whom to say hello
+               required: true
+               type: string
+          responses:
+            "200":
+              description: Success
+              schema:
+                # a pointer to a definition
+                $ref: "#/definitions/ConfirmTaskResponse"
+            # responses may fall through to errors
+            default:
+              description: Error
+              schema:
+                $ref: "#/definitions/ErrorResponse"
   /pollingLocation:
     # binds a127 app logic to a route
     x-swagger-router-controller: hello_world
@@ -193,7 +222,7 @@ paths:
           description: Success
           schema:
             # a pointer to a definition
-            $ref: "#/definitions/PollingResponse"
+            $ref: "#/definitions/OpenResponse"
         # responses may fall through to errors
         default:
           description: Error
@@ -201,6 +230,14 @@ paths:
             $ref: "#/definitions/ErrorResponse"
 # complex objects have schema definitions
 definitions:
+  OpenResponse:
+      properties: {}
+  ConfirmTaskResponse:
+      required:
+        - status
+      properties:
+        status:
+          type: string
   PollingResponse:
       required:
         - locationList
